2005-11-15 New entries should be added at the top 2005-08-14 Applied
           Jouni K Steppanen's boxplot patch SF patch#1349997 - JDH

2005-11-08 Added Nicolas' irregularly spaced image patch

2005-11-08 Deprecated HorizontalSpanSelector and replaced with
           SpanSelection that takes a third arg, direction.  The
           new SpanSelector supports horizontal and vertical span
           selection, and the appropriate min/max is returned. - CM

2005-11-01 Contributed Nickolas Young's patch for afm mathtext to
           support mathtext based upon the standard postscript Symbol
           font when ps.usetex = True.

2005-10-26 Added support for scatter legends - thanks John Gill

2005-10-20 Fixed image clipping bug that made some tex labels
           disappear.  Closes bug - JDH

2005-10-14 Removed aqrt from dvipng 1.6 alpha channel mask.  Where did
           that come from?

2005-10-14 Added width kwarg to hist function

2005-10-10 Replaced all instances of os.rename with shutil.move

2005-10-05 Added Michael Brady's ydate patch

2005-10-04 Added rkern's texmanager patch

2005-09-25 contour.py modified to use a single ContourSet class
           that handles filled contours, line contours, and labels;
           added keyword arg (clip_ends) to contourf.
           Colorbar modified to work with new ContourSet object;
           if the ContourSet has lines rather than polygons, the
           colorbar will follow suit. Fixed a bug introduced in
           0.84, in which contourf(...,colors=...) was broken - EF

2005-09-14 Added a new 'resize_event' which triggers a callback with a
           backend_bases.ResizeEvent object - JDH

2005-09-14 font_manager.py: removed chkfontpath from x11FontDirectory() - SC

2005-09-14 Factored out auto date locator/formatter factory code into
           matplotlib.date.date_ticker_factory; applies John Bryne's
           quiver patch.

2005-09-13 Added Mark's axes positions history patch #1286915
